# tower

./: CLAUDE.md  README.md
docs/: approval-spec.md  claude-tower-salvage.md  conformance.md  content-vocabulary.md  conversation-spec.md  feature-comparison.md  glossary.md  nats-spec.md  orchestration-layer.md  roadmap.md  scenarios.md  sdk-refactor-playbook.md  tap-spec.md  tap-testing.md  tool-philosophy.md  tower-v1-design.md  tower-ws-spec.md
docs/mvp/: bridge-agent-parity-plan.md  bridge-exec-permissions.md  bridge-stdio-spec.md  frontend-architecture.md  frontend-comparison-leptos.md  frontend-comparison.md  frontend-leptos-plan.md  frontend-parity.md  tower-v1-design.md  tower-ws-spec.md
docs/planning/: architecture-refactor.md  cli-features.md  code-architecture.md  composition-model.md  error-reporting.md  multi-transport-architecture.md  project-state.md  sdk-feature-inventory.md  sdk-shape.md  sdk-tools.md  tool-philosophy.md  toolset-direction.md  tui-architecture.md  unix-lessons.md
docs/spec/: agent-spec.md  conformance.md  content-vocabulary.md  conversation-spec.md  nats-spec.md  scenarios.md  surface-spec.md
docs/spec/fixtures/: scenario-1.jsonl  scenario-2.jsonl  scenario-2b.jsonl  scenario-3.jsonl  scenario-4.jsonl  scenario-5.jsonl  scenario-6a.jsonl  scenario-6b.jsonl  scenario-7.jsonl  scenario-8a.jsonl  scenario-8b.jsonl
docs/spec/fixtures/agent/: scenario-a1.jsonl  scenario-a2.jsonl  scenario-a3.jsonl  scenario-a4.jsonl  scenario-a5.jsonl
docs/spec/fixtures/v2/: scenario-1.jsonl  scenario-2.jsonl  scenario-2b.jsonl  scenario-3.jsonl  scenario-4.jsonl  scenario-5.jsonl  scenario-7.jsonl  scenario-8a.jsonl  scenario-8b.jsonl
mvp/: .gitignore  Cargo.toml  compose.yaml  copy-usage-telemetry.mjs  dev.sh  justfile  migrate-stream-retention.sh  migrate-usage-retention.sh  rust-toolchain.toml  start-bridge.sh  stream-init.sh
mvp/crates/bridge/: Cargo.toml  build.rs
mvp/crates/bridge/examples/: attach_probe.rs
mvp/crates/bridge/src/: agent.rs  anthropic.rs  approval.rs  attach.rs  decisions.rs  delete.rs  editfile.rs  exec.rs  find.rs  history.rs  historytools.rs  imaging.rs  lib.rs  main.rs  matcher.rs  memory.rs  memtools.rs  mutate.rs  objects.rs  permissions.rs  pipe.rs  read.rs  readfile.rs  refs.rs  skills.rs  slice.rs  stream.rs
mvp/crates/helm/: Cargo.toml
mvp/crates/helm/src/: approvals.rs  clipboard.rs  command.rs  config.rs  conversation.rs  editor.rs  main.rs  markdown.rs  submit.rs  transport.rs  usage.rs  view.rs
mvp/crates/towerd/: Cargo.toml
mvp/crates/towerd/src/: broker.rs  gateway.rs  ingest.rs  lib.rs  main.rs  refs.rs  views.rs  web.rs  ws.rs
mvp/crates/towerd/src/views/: fold.rs  mod.rs  mutate.rs  query.rs  schema.rs  tests.rs  types.rs  unread.rs
mvp/crates/towerd/tests/: integration.rs
mvp/crates/wire/: Cargo.toml
mvp/crates/wire/src/: agent.rs  approval.rs  conv.rs  ids.rs  ingest.rs  lib.rs  say.rs  ts.rs
mvp/crates/wire/tests/: scenarios.rs
mvp/crates/ws-types/: Cargo.toml
mvp/crates/ws-types/src/: lib.rs
mvp/frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
mvp/frontend-leptos/: Cargo.toml  Trunk.toml  index.html  style.css
mvp/frontend-leptos/src/: app.rs  main.rs  pricing.rs  time.rs  transport.rs  uploads.rs
mvp/frontend-leptos/src/concerns/: approvals.rs  conversation.rs  mod.rs  rail.rs  usage.rs  view.rs
mvp/frontend-leptos/src/ui/: approvals.rs  block.rs  conversation.rs  mod.rs  rail.rs  refview.rs  tabs.rs  unread.rs
mvp/frontend-rs/: Cargo.toml  Trunk.toml  index.html
mvp/frontend-rs/src/: app.rs  main.rs  time.rs  transport.rs  uploads.rs
mvp/frontend-rs/src/concerns/: approvals.rs  conversation.rs  mod.rs  rail.rs
mvp/frontend/src/: App.svelte  app.css  main.ts
mvp/frontend/src/lib/: ApprovalsView.svelte  BlockView.svelte  ConversationPanel.svelte  MarkdownRenderer.svelte  MessageView.svelte  RefView.svelte  RowList.svelte  UnreadView.svelte  VirtualList.svelte  app.ts  tower.svelte.ts  types.ts
mvp/frontend/src/lib/concerns/: approvals.svelte.ts  conversation.svelte.ts  rail.svelte.ts  usage.svelte.ts  view.svelte.ts
mvp/frontend/src/lib/core/: markdown.test.ts  markdown.ts  pricing.test.ts  pricing.ts  textHeight.ts  time.test.ts  time.ts  transport.svelte.ts  uploads.ts
mvp/vendor-unicode-width/src/: tables.rs
poc/: .gitignore  Cargo.toml  README.md  dev.sh  justfile  rust-toolchain.toml  tui.sh
poc/agent/: Cargo.toml
poc/agent/examples/: client.rs  stub_model.rs
poc/agent/src/: agent.rs  bridge.rs  lib.rs  main.rs  model.rs  protocol.rs  sse.rs
poc/docs/: agent.md  fake-model.md  spec.md  standards.md  tap-mission-brief.md  tower-wasm.md  tower.md  tui.md
poc/fake-model/: Cargo.toml
poc/fake-model/src/: lib.rs  main.rs  protocol.rs  reply.rs  server.rs
poc/integration/: drive.mjs  package.json  pnpm-lock.yaml
poc/ptyspike/: Cargo.toml
poc/ptyspike/hooktest/: log-stop.sh  session-start.sh
poc/ptyspike/hooktest/.claude/: settings.json
poc/ptyspike/src/: main.rs
poc/tower-wasm/: Cargo.toml
poc/tower-wasm/crates/backend/: Cargo.toml
poc/tower-wasm/crates/backend/src/: lib.rs  main.rs
poc/tower-wasm/crates/frontend/: Cargo.toml
poc/tower-wasm/crates/frontend/src/: app.rs  main.rs
poc/tower-wasm/crates/protocol/: Cargo.toml
poc/tower-wasm/crates/protocol/src/: fold.rs  lib.rs
poc/tower-wasm/harness/stub-agents/: Cargo.toml
poc/tower-wasm/harness/stub-agents/src/: main.rs
poc/tower-wasm/harness/ws-probe/: Cargo.toml
poc/tower-wasm/harness/ws-probe/src/: main.rs
poc/tower/backend/: Cargo.toml
poc/tower/backend/src/: bridge.rs  lib.rs  main.rs  protocol.rs  server.rs
poc/tower/frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
poc/tower/frontend/src/: feed.ts  fold.test.ts  fold.ts  main.ts  panel.ts  style.css
poc/tower/harness/: package.json  pnpm-lock.yaml  stub-agents.mjs  ws-check.mjs
poc/tui/: Cargo.toml
poc/tui/examples/: stub_agent.rs
poc/tui/src/: bridge.rs  lib.rs  main.rs  protocol.rs  state.rs  ui.rs
