[workspace]
resolver = "2"
members = ["crates/wire", "crates/towerd", "crates/bridge"]

[workspace.package]
version = "0.1.0"
edition = "2024"

# Shared lints; crates opt in with `[lints] workspace = true`.
[workspace.lints.clippy]
# `.clone()` on an Arc/Rc reads like a deep copy; `Arc::clone(&x)` says
# "new handle, same data" at the call site.
clone_on_ref_ptr = "warn"

# Shared dependencies live here once; crates inherit with `foo.workspace = true`.
[workspace.dependencies]
anyhow = "1"
async-nats = "0.49"
axum = { version = "0.8", features = ["ws"] }
futures = "0.3"
# reqwest: the bridge's model adapter — one streaming HTTPS call; rustls (no
# system OpenSSL) with native-roots so it trusts the OS keychain — required
# behind TLS-intercepting proxies (Zscaler). uuid: id minting.
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls-native-roots"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
# Process-group kill for the Bash tool's cancellation (kill(-pgid)): tokio's
# own kill() reaches only the direct child, never the tree.
libc = "0.2"
# The YAML organisation's own continuation of serde_yaml (github.com/yaml/
# yaml-serde) — skills frontmatter is YAML, and hand-parsing YAML is an
# approximation that already bit once (block-scalar descriptions).
yaml_serde = "0.10"
