[workspace]
resolver = "2"
members = ["crates/wire", "crates/ws-types", "crates/towerd", "crates/bridge", "crates/helm"]

[workspace.package]
version = "0.1.0"
edition = "2024"

# Shared lints; crates opt in with `[lints] workspace = true`.
[workspace.lints.clippy]
# `.clone()` on an Arc/Rc reads like a deep copy; `Arc::clone(&x)` says
# "new handle, same data" at the call site.
clone_on_ref_ptr = "warn"

# Shared dependencies live here once; crates inherit with `foo.workspace = true`.
[workspace.dependencies]
anyhow = "1"
async-nats = "0.49"
axum = { version = "0.8", features = ["ws"] }
futures = "0.3"
# reqwest: the bridge's model adapter — one streaming HTTPS call; rustls (no
# system OpenSSL) with native-roots so it trusts the OS keychain — required
# behind TLS-intercepting proxies (Zscaler). uuid: id minting.
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls-native-roots"] }
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
# ReadFile's image conditioning (readfile.rs): native decode/resize/encode,
# no shelling out to a platform tool (sips was the Node-side workaround for
# not having a real image library without a second native binary alongside
# better-sqlite3 — that constraint doesn't exist in Rust). Default features
# pull in every codec; only the four ReadFile actually accepts are enabled.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
# preserve_order: Map keeps insertion order (an IndexMap) instead of
# alphabetizing keys (the default BTreeMap backing). Without it, every
# round-trip through serde_json::Value silently reorders a tool call's
# fields — telemetry.tool.use's "input": block["input"] included — so a
# schema's declared field order (and whatever order the model actually
# wrote) never survives to what gets published or reviewed.
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
# EditFile's diff generation — the same job the CLI's own EditFile.ts hands
# to the npm `diff` package; no reason to hand-roll Myers diff in Rust.
similar = "2"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
# Process-group kill for the Bash tool's cancellation (kill(-pgid)): tokio's
# own kill() reaches only the direct child, never the tree.
libc = "0.2"
# Attachment resolution: object-store bytes inline into the model request as
# base64 (the API's own encoding for binary sources).
base64 = "0.22"
# The YAML organisation's own continuation of serde_yaml (github.com/yaml/
# yaml-serde) — skills frontmatter is YAML, and hand-parsing YAML is an
# approximation that already bit once (block-scalar descriptions).
yaml_serde = "0.10"
# helm's terminal engine: ratatui owns the present/platform layers of
# docs/planning/tui-architecture.md (cell diffing, resize, alt screen) so
# helm only writes layout — the whole reason a Rust TUI is cheap to build.
# crossterm is ratatui's platform backend, depended on directly for the
# input events (raw keys) ratatui doesn't wrap.
ratatui = "0.29"
crossterm = "0.28"
# The editing widget ratatui deliberately doesn't ship: multi-line text
# entry with cursor-following viewport scroll, word ops, undo. Replaces a
# hand-rolled editor that was growing scroll logic the shelf already has.
tui-textarea = "0.7"
# helm's layout measures its own wrap (the hit map demands row→block truth),
# so it must measure the way the renderer does: grapheme clusters and East
# Asian widths, the same crates ratatui itself measures with.
unicode-segmentation = "1"
unicode-width = "0.2"
