[workspace]
resolver = "2"
members = ["fake-model", "agent", "tui", "tower/backend"]
# tower-wasm is its own workspace; it stays separate.
exclude = ["tower-wasm"]

[workspace.package]
version = "0.1.0"
edition = "2024"

# Shared dependencies live here once; crates inherit with `foo.workspace = true`.
# Crate-specific dependencies (clap, ratatui, ...) stay in their own crate.
[workspace.dependencies]
anyhow = "1"
async-nats = "0.49"
axum = "0.8"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "1"
