[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
async-nats = "0.49.1"
bytes = "1.12.0"
clap = { version = "4.6.1", features = ["derive"] }
futures = "0.3.32"
rand = "0.10.2"
reqwest = { version = "0.13.4", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
