[package]
name = "agent"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-nats.workspace = true
bytes = "1"
clap = { version = "4", features = ["derive"] }
futures.workspace = true
rand = "0.10"
reqwest = { version = "0.13", features = ["json", "stream"] }
serde.workspace = true
serde_json.workspace = true
thiserror = "2"
tokio = { workspace = true, features = ["full"] }
