[package]
name = "fake-model"
version = "0.1.0"
edition = "2024"

[lib]
name = "fake_model"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time"] }
