[package]
name = "fake-model"
version.workspace = true
edition.workspace = true

[lib]
name = "fake_model"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "time"] }
