[package]
name = "tui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-nats = "0.49"
crossterm = { version = "0.29", features = ["event-stream"] }
futures = "0.3"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
