[package]
name = "tui"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-nats.workspace = true
crossterm = { version = "0.29", features = ["event-stream"] }
futures.workspace = true
ratatui = "0.30"
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
