[package]
name = "bridge"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

# The bridge agent v0: a converse-only agent host proving the conversation
# concern end to end without claude-sdk-cli — stdio spawn control, the
# servicer discipline on NATS, the messages API over SSE. Deliberate cuts:
# no tools (hence no approvals), no persistence, no compaction.
[dependencies]
wire = { path = "../wire" }
anyhow.workspace = true
async-nats.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
yaml_serde.workspace = true
