[package]
name = "bridge"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

# The bridge agent: an agent host proving the concerns end to end without
# claude-sdk-cli. Stdio spawn control, the servicer discipline on NATS, the
# messages API over SSE, the Skill tool, and Bash gated behind the approval
# concern (every command asks, v1). Deliberate cuts: no persistence, no
# compaction.
[dependencies]
wire = { path = "../wire" }
anyhow.workspace = true
async-nats.workspace = true
base64.workspace = true
futures.workspace = true
image.workspace = true
libc.workspace = true
regex.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
similar.workspace = true
tokio.workspace = true
uuid.workspace = true
yaml_serde.workspace = true
