[package]
name = "helm"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

# helm: the standalone terminal client. One bridge, spawned locally and dialed
# over its attach fd (bridge::attach) — genuinely NATS-less: requests and
# uploads ride the fd as id-correlated envelopes and bridge proxies them onto
# the wire. Bridge stays fully NATS-connected; helm needs only its child's
# pipes.
[dependencies]
bridge = { path = "../bridge" }
wire = { path = "../wire" }
anyhow.workspace = true
base64.workspace = true
crossterm.workspace = true
libc.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tui-textarea.workspace = true
