[package]
name = "tower-backend"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-nats.workspace = true
axum = { workspace = true, features = ["ws"] }
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "time", "sync", "net"] }
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
