[package]
name = "backend"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = "1"
async-nats = "0.49"
axum = { version = "0.8", features = ["ws"] }
futures = "0.3"
protocol = { path = "../protocol" }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time", "sync"] }
tower-http = { version = "0.6", features = ["fs"] }
