[package]
name = "frontend"
version = "0.1.0"
edition.workspace = true

[dependencies]
eframe = "0.31"
egui = "0.31"
ewebsock = "0.8"
protocol = { path = "../protocol" }
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Location",
    "Window",
    "console",
] }
